# mlops

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: __init__.py  app.py  model.py  schemas.py
tests/: test_api.py
